app-test/testdata/typesystem/neg/type-comparison-list-type-with-any-type/check/cmp2.check
testdata/typesystem/neg/type-comparison-list-type-with-any-type/src/cmp.cal:5:21: error: = is not supported with List(type:uint(size=2), size=3) and List(type:uint(size=3), size=4).
            OUT <-- [1, 2, 3] = [1, 2, 3, 4]; // error
                    ^^^^^^^^^^^^^^^^^^^^^^^^